# StudentCourseManager

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
data/: students.json
include/: Course.h  Grade.h  Storage.h  Student.h  StudentManager.h
src/: Course.cpp  Grade.cpp  Storage.cpp  Student.cpp  StudentManager.cpp  main.cpp
tests/: test_student_manager.cpp
